--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="parallax bg-image-1"></div>
   <div class="quote">
-    <p> The Japanese archipelago twenty years in the future. Canine saturation has reached epidemic proportions. An outbreak of dog flu rips through the city of Nagasaki. Mayor Kobayashi issues emergency orders calling for a hasty quarantine. Trash Island becomes an exiled colony, the Isle of Dogs.</p>
+    <blockquote>The Japanese archipelago twenty years in the future. Canine saturation has reached epidemic proportions. An outbreak of dog flu rips through the city of Nagasaki. Mayor Kobayashi issues emergency orders calling for a hasty quarantine. Trash Island becomes an exiled colony, the Isle of Dogs.</blockquote>
   </div>
   <div class="parallax bg-image-2"></div>
   <div class="quote"></div>
